--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.10.0",
+    "framer-motion": "^11.2.14",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
