--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@directus/sdk": "^16.1.1",
+    "@gsap/react": "^2.1.1",
     "@tabler/icons-react": "^3.10.0",
     "framer-motion": "^11.2.14",
+    "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
