--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@directus/sdk": "^17.0.1",
     "@gsap/react": "^2.1.1",
     "@tabler/icons-react": "^3.14.0",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "next": "14.2.8",
